# queueflow-portfolio

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: ai.py  analytics.py  auth.py  counters.py  kiosk.py  router.py  signage.py  tickets.py
backend/app/api/v1/admin/: channels.py  counters_router.py  locations.py  router.py  services_router.py  tenants.py  users.py
backend/app/core/: config.py  logging.py  otel.py  rate_limit.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  audit_log.py  channel.py  counter.py  idempotency_key.py  interaction.py  location.py  service.py  tenant.py  ticket.py  ticket_event.py  user.py
backend/app/repositories/: analytics_repo.py  base_repo.py  ticket_repo.py  user_repo.py
backend/app/schemas/: analytics.py  channel.py  common.py  counter.py  location.py  service.py  signage.py  tenant.py  ticket.py  user.py
backend/app/services/: admin_service.py  ai_service.py  analytics_service.py  signage_service.py  ticket_service.py
backend/app/state_machine/: ticket_fsm.py
backend/app/workers/: celery_app.py  tasks.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_add_from_status_to_ticket_events.py  0003_db_state_machine_and_immutable_events.py  0004_postgres_rls_multi_tenant.py
backend/scripts/: seed.py
backend/tests/: conftest.py
backend/tests/integration/: test_call_next.py  test_db_state_machine.py  test_idempotency.py  test_rbac.py  test_signage.py  test_tickets.py
backend/tests/unit/: test_state_machine.py
docs/: VERSIONING.md  architecture.md  data-model.md  performance.md  security.md
docs/adr/: 0001-storage-strategy.md  0002-state-machine-event-log.md  0003-sse-vs-websocket.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Navbar.tsx  QueueStats.tsx  TicketCard.tsx
frontend/src/hooks/: useAuth.ts  useSignage.ts
frontend/src/pages/: AdminPanel.tsx  Kiosk.tsx  Login.tsx  OperatorQueue.tsx  SignageDisplay.tsx
frontend/src/types/: index.ts
keycloak/: realm-export.json
